--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~spectre.css/src/spectre.scss"
+// @import "~spectre.css/src/spectre-exp.scss"
+// @import "~spectre.css/src/spectre-icons.scss"
+
+html, body
+  widht: 100%
+  height: 100%
+  margin: 0
