Add search view

--- a/src/controller/app/app.component.html
+++ b/src/controller/app/app.component.html
@@ -1,9 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
-  <div class="flex-rows">
-    <app-preview-container
-      *ngFor="let index of previews"
-      [index]="index"
-    ></app-preview-container>
+  <div class="columns">
+    <div class="column col-9">
+      <div class="flex-rows">
+        <app-preview-container
+          *ngFor="let index of previews"
+          [index]="index"
+        ></app-preview-container>
+      </div>
+    </div>
+    <div class="column col-3">
+      <app-search-container></app-search-container>
+    </div>
   </div>
 </div>
