--- a/src/controller/app/app.component.sass
+++ b/src/controller/app/app.component.sass
@@ -5,9 +5,14 @@
 .container
   height: 100%
 
+  padding: 0.2rem // OVERRIDE spectre
+
+  .columns
+    height: 100%
+
   .flex-rows
     height: 100%
-    background-color: green
+    // background-color: green
     display: flex
     flex-direction: column
 
