--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,7 @@
+
+$body-bg: #262626
+$body-font-color: #a1a1a1
+
 @import "~spectre.css/src/spectre.scss"
 // @import "~spectre.css/src/spectre-exp.scss"
 // @import "~spectre.css/src/spectre-icons.scss"
