--- a/src/controller/app/components/search/search-container.component.html
+++ b/src/controller/app/components/search/search-container.component.html
@@ -1,5 +1,18 @@
 <div class="container">
-    <div class="form-group">
-      <input class="form-input" type="text" id="search-keyword" placeholder="Search on YouTube" />
+  <div class="form-group">
+    <input
+      class="form-input"
+      type="text"
+      id="search-keyword"
+      placeholder="Search on YouTube"
+      [(ngModel)]="query"
+      (keyup)="keyup($event)"
+    />
+  </div>
+  <div class="search-result">
+    <div class="search-result-item" *ngFor="let item of items">
+      <span>{{item.snippet.title}}</span>
+      <img src="{{item.snippet.thumbnails.default.url}}" />
     </div>
+  </div>
 </div>
