Refactor file structure

--- a/src/controller/app/app.component.html
+++ b/src/controller/app/app.component.html
@@ -3,10 +3,10 @@
   <div class="columns">
     <div class="column col-9">
       <div class="flex-rows">
-        <app-preview-container
+        <app-preview-track
           *ngFor="let index of previews"
           [index]="index"
-        ></app-preview-container>
+        ></app-preview-track>
       </div>
     </div>
     <div class="column col-3">
