Implement load video on drop

--- a/src/controller/app/components/preview/track.component.html
+++ b/src/controller/app/components/preview/track.component.html
@@ -4,13 +4,7 @@
     (dragover)="dragover($event)"
     >
     <div class="column col-4">
-      <iframe
-        width="100%"
-        height="80%"
-        src="https://www.youtube.com/embed/P0wH3npCB2Q"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-      ></iframe>
+      <div id="player-{{index}}"></div>
     </div>
     <div class="column col-4">bb</div>
     <div class="column col-4">cc</div>
