Implement drag over feedback UI

--- a/src/controller/app/components/preview/track.component.html
+++ b/src/controller/app/components/preview/track.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container" [ngStyle]="containerStyle()">
   <div class="columns"
     (drop)="drop($event)"
     (dragover)="dragover($event)"
+    (dragleave)="dragleave()"
     >
     <div class="column col-4">
       <div id="player-{{index}}"></div>
