--- a/src/controller/app/components/search/search-container.component.html
+++ b/src/controller/app/components/search/search-container.component.html
@@ -15,7 +15,7 @@
       draggable="true"
       (dragstart)="drag($event, item)"
     >
-      <span>{{item.snippet.title}}</span>
+      <div>{{item.snippet.title}}</div>
       <img src="{{item.snippet.thumbnails.default.url}}" />
     </div>
   </div>
