Create VideoOperation model

--- a/src/controller/app/app.component.html
+++ b/src/controller/app/app.component.html
@@ -6,6 +6,7 @@
         <app-preview-track
           *ngFor="let index of previews"
           [index]="index"
+          [push]="push"
         ></app-preview-track>
       </div>
     </div>
