--- a/src/controller/app/components/preview/track.component.html
+++ b/src/controller/app/components/preview/track.component.html
@@ -7,7 +7,8 @@
     <div class="column col-4">
       <div id="player-{{index}}"></div>
     </div>
-    <div class="column col-4">bb</div>
-    <div class="column col-4">cc</div>
+    <div class="column col-8">
+      <input class="slider" type="range" min="0" max="100" value="0" />
+    </div>
   </div>
 </div>
