Communication btw Cw and Mw, by IPC

--- a/src/controller/app/app.component.html
+++ b/src/controller/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="column col-9">
       <div class="flex-rows">
         <app-preview-track
-          *ngFor="let index of previews"
+          *ngFor="let index of tracks"
           [index]="index"
           [push]="push"
         ></app-preview-track>
