--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,5 @@
 
-$body-bg: #262626
-$body-font-color: #a1a1a1
+@import "./styles/colors.sass"
 
 @import "~spectre.css/src/spectre.scss"
 @import "~spectre.css/src/spectre-exp.scss"
