--- a/src/render/controller/app/components/search/search-container.component.html
+++ b/src/render/controller/app/components/search/search-container.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div>
+    <button class="btn" (click)="startAuthentication()">Start Authentication.</button>
+  </div>
   <div class="form-group">
     <input
       class="form-input"
