Refactor search container

--- a/src/render/controller/app/app.component.html
+++ b/src/render/controller/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <div class="columns">
-    <div class="column col-9">
+    <div class="column col-8 preview-track-container">
       <div class="flex-rows">
         <app-preview-track
           *ngFor="let index of tracks"
@@ -10,7 +10,7 @@
         ></app-preview-track>
       </div>
     </div>
-    <div class="column col-3">
+    <div class="column col-4">
       <app-search-container></app-search-container>
     </div>
   </div>
