--- a/src/render/controller/app/app.component.sass
+++ b/src/render/controller/app/app.component.sass
@@ -1,6 +1,7 @@
 // .flex-rows {
 //   background-color: pink;
 // }
+@import '../../styles/sizing.scss'
 
 .container
   height: 100%
@@ -9,6 +10,8 @@
 
   .columns
     height: 100%
+    .preview-track-container
+      padding-top: $selector-tab-height
 
   .flex-rows
     height: 100%
