--- a/src/render/controller/app/components/search/search-container.component.html
+++ b/src/render/controller/app/components/search/search-container.component.html
@@ -1,25 +1,15 @@
 <div class="container">
   <div>
-    <button class="btn" (click)="startAuthentication()">Start Authentication.</button>
+    <ul class="tab tab-block">
+      <li *ngFor="let tab of tabs"
+        class="tab-item"
+        [ngClass]="{'active': active == tab}"
+        (click)="changeTab(tab)"
+      >
+        <a>{{tab}}</a>
+      </li>
+    </ul>
+    <!-- <button class="btn" (click)="startAuthentication()">Start Authentication.</button> -->
   </div>
-  <div class="form-group">
-    <input
-      class="form-input"
-      type="text"
-      id="search-keyword"
-      placeholder="Search on YouTube"
-      [(ngModel)]="query"
-      (keyup)="keyup($event)"
-    />
-  </div>
-  <div class="search-result">
-    <div class="search-result-item"
-      *ngFor="let item of items"
-      draggable="true"
-      (dragstart)="drag($event, item)"
-    >
-      <div>{{item.snippet.title}}</div>
-      <img src="{{item.snippet.thumbnails.default.url}}" />
-    </div>
-  </div>
+  <app-youtube-search *ngIf="active == 'YouTube'"></app-youtube-search>
 </div>
