--- a/src/render/styles.sass
+++ b/src/render/styles.sass
@@ -1,5 +1,6 @@
 
 @import "./styles/colors.sass"
+@import "./styles/sizing.scss"
 
 @import "~spectre.css/src/spectre.scss"
 @import "~spectre.css/src/spectre-exp.scss"
