--- a/src/render/controller/app/components/search/search-container.component.sass
+++ b/src/render/controller/app/components/search/search-container.component.sass
@@ -6,8 +6,8 @@ $selector-tab-height: 48px
   height: 100%
   display: flex
   flex-direction: column
-  // .columns
-  //   height: 100%
+  display: flex
+  flex-direction: column
   >div.search-result
     flex: 1
     overflow: scroll
