--- a/src/render/controller/app/components/search/youtube/youtube-search.component.sass
+++ b/src/render/controller/app/components/search/youtube/youtube-search.component.sass
@@ -1,3 +1,20 @@
-div.search-result
+\:host
   flex: 1
-  overflow: scroll
+  display: flex
+
+  .youtube-search-main
+    width: 100%
+    display: flex
+    flex-direction: column
+    div.search-result
+      overflow: scroll
+      flex: 1
+
+  .auth-first
+    flex: 1
+    display: flex
+    align-items: center
+    justify-content: center
+    >div
+      text-align: center
+      max-width: 90%
