Improve search quality

--- a/src/render/controller/app/components/search/youtube/youtube-search.component.sass
+++ b/src/render/controller/app/components/search/youtube/youtube-search.component.sass
@@ -9,6 +9,11 @@
     div.search-result
       overflow: scroll
       flex: 1
+      div.search-result-item
+        display: flex
+        margin-bottom: 8px
+        &>div
+          padding-left: 8px
 
   .auth-first
     flex: 1
